@@ -1,97 +1,119 @@
 package com.gilbertomorales.howlyvelocity.comandos;
 
 import com.gilbertomorales.howlyvelocity.api.HowlyAPI;
-import com.gilbertomorales.howlyvelocity.api.punishment.PunishmentAPI;
+import com.gilbertomorales.howlyvelocity.managers.PlayerDataManager;
 import com.gilbertomorales.howlyvelocity.managers.TagManager;
-import com.gilbertomorales.howlyvelocity.utils.LogColor;
 import com.velocitypowered.api.command.CommandSource;
 import com.velocitypowered.api.command.SimpleCommand;
 import com.velocitypowered.api.proxy.Player;
 import com.velocitypowered.api.proxy.ProxyServer;
 import net.kyori.adventure.text.Component;
-import org.slf4j.Logger;
 
 import java.util.List;
-import java.util.Optional;
 import java.util.UUID;
+import java.util.concurrent.CompletableFuture;
+import java.util.stream.Collectors;
 
 public class UnbanCommand implements SimpleCommand {
 
     private final ProxyServer server;
     private final TagManager tagManager;
-    private final PunishmentAPI punishmentAPI;
-    private final Logger logger;
+    private final PlayerDataManager playerDataManager;
+    private final HowlyAPI api;
 
     public UnbanCommand(ProxyServer server, TagManager tagManager) {
         this.server = server;
         this.tagManager = tagManager;
-        this.punishmentAPI = HowlyAPI.getInstance().getPunishmentAPI();
-        this.logger = com.gilbertomorales.howlyvelocity.HowlyVelocity.getInstance().getLogger();
+        this.playerDataManager = HowlyAPI.getInstance().getPlugin().getPlayerDataManager();
+        this.api = HowlyAPI.getInstance();
     }
 
     @Override
     public void execute(Invocation invocation) {
-        CommandSource sender = invocation.source();
-
-        // Verificar permissão apenas se for jogador
-        if (sender instanceof Player player) {
-            if (!player.hasPermission("howly.moderador")) {
-                sender.sendMessage(Component.text("§cVocê precisa ser do grupo §2Moderador §cou superior para usar este comando."));
-                return;
-            }
-        }
-
+        CommandSource source = invocation.source();
         String[] args = invocation.arguments();
-        if (args.length == 0) {
-            if (sender instanceof Player) {
-                sender.sendMessage(Component.text("§cUso: /unban <jogador>"));
-            } else {
-                logger.info(LogColor.error("Unban", "Uso: /unban <jogador>"));
-            }
+
+        if (!source.hasPermission("howly.unban")) {
+            source.sendMessage(Component.text("§cVocê não tem permissão para usar este comando."));
             return;
         }
 
-        String playerName = args[0];
-        String unbanner = sender instanceof Player ? ((Player) sender).getUsername() : "Console";
-
-        // Tentar encontrar o jogador online primeiro
-        Optional<Player> targetOptional = server.getPlayer(playerName);
-        if (targetOptional.isPresent()) {
-            UUID targetUUID = targetOptional.get().getUniqueId();
-            
-            punishmentAPI.unbanPlayer(targetUUID, unbanner).thenAccept(success -> {
-                if (success) {
-                    if (sender instanceof Player) {
-                        sender.sendMessage(Component.text("§aJogador " + tagManager.getFormattedPlayerName(targetOptional.get()) + " §afoi desbanido com sucesso!"));
-                    } else {
-                        logger.info(LogColor.success("Unban", "Jogador " + targetOptional.get().getUsername() + " foi desbanido com sucesso!"));
-                    }
-                } else {
-                    if (sender instanceof Player) {
-                        sender.sendMessage(Component.text("§cJogador não está banido ou não foi encontrado."));
-                    } else {
-                        logger.info(LogColor.error("Unban", "Jogador não está banido ou não foi encontrado."));
-                    }
-                }
-            });
-        } else {
-            // TODO: Implementar busca por nome no banco de dados
-            if (sender instanceof Player) {
-                sender.sendMessage(Component.text("§cJogador não encontrado. Implemente busca por nome no banco de dados."));
-            } else {
-                logger.info(LogColor.error("Unban", "Jogador não encontrado. Implemente busca por nome no banco de dados."));
-            }
+        if (args.length < 1) {
+            source.sendMessage(Component.text("§cUso: /unban <jogador>"));
+            return;
         }
+
+        String targetName = args[0];
+
+        // Obter nome do unbanner
+        String unbannerName;
+        if (source instanceof Player) {
+            unbannerName = ((Player) source).getUsername();
+        } else {
+            unbannerName = "Console";
+        }
+
+        // Buscar jogador no banco de dados
+        source.sendMessage(Component.text("§eBuscando jogador no banco de dados..."));
+
+        playerDataManager.getPlayerUUID(targetName).thenAccept(uuid -> {
+            if (uuid != null) {
+                // Jogador encontrado no banco de dados
+                playerDataManager.getPlayerName(uuid).thenAccept(correctName -> {
+                    unbanPlayer(source, uuid, correctName != null ? correctName : targetName, unbannerName);
+                });
+            } else {
+                // Jogador não encontrado
+                source.sendMessage(Component.text("§cJogador não encontrado no banco de dados."));
+            }
+        });
+    }
+
+    private void unbanPlayer(CommandSource source, UUID targetUUID, String targetName, String unbannerName) {
+        // Verificar se o jogador está banido
+        api.getPunishmentAPI().isPlayerBanned(targetUUID).thenAccept(isBanned -> {
+            if (!isBanned) {
+                source.sendMessage(Component.text("§cEste jogador não está banido."));
+                return;
+            }
+
+            // Desbanir jogador
+            CompletableFuture<Boolean> unbanFuture = api.getPunishmentAPI().unbanPlayer(targetUUID, unbannerName);
+
+            unbanFuture.thenAccept(success -> {
+                if (success) {
+                    // Notificar staff
+                    String unbanMessage = "§a§lUNBAN §8» §f" + targetName + " §7foi desbanido por §f" + unbannerName + "§7.";
+
+                    server.getAllPlayers().stream()
+                            .filter(p -> p.hasPermission("howly.unban.notify"))
+                            .forEach(p -> p.sendMessage(Component.text(unbanMessage)));
+
+                    // Notificar quem executou o comando
+                    source.sendMessage(Component.text("§aJogador desbanido com sucesso!"));
+                } else {
+                    source.sendMessage(Component.text("§cNão foi possível desbanir o jogador."));
+                }
+            }).exceptionally(ex -> {
+                source.sendMessage(Component.text("§cErro ao desbanir jogador: " + ex.getMessage()));
+                ex.printStackTrace();
+                return null;
+            });
+        });
     }
 
     @Override
     public List<String> suggest(Invocation invocation) {
-        if (invocation.arguments().length == 1) {
+        String[] args = invocation.arguments();
+
+        if (args.length == 1) {
+            String partialName = args[0].toLowerCase();
             return server.getAllPlayers().stream()
-                .map(Player::getUsername)
-                .filter(name -> name.toLowerCase().startsWith(invocation.arguments()[0].toLowerCase()))
-                .toList();
+                    .map(Player::getUsername)
+                    .filter(name -> name.toLowerCase().startsWith(partialName))
+                    .collect(Collectors.toList());
         }
+
         return List.of();
     }
 }
